--- a/WiFi/AndroidManifest.xml
+++ b/WiFi/AndroidManifest.xml
@@ -21,17 +21,16 @@
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity> 
         <activity android:name="ActivityTwo">
             <intent-filter >
-                    <action android:name="my.action.bat.SCHEDULE_ACT" />
-
-                    <category android:name="android.intent.category.DEFAULT" />
-                </intent-filter>
+                <action android:name="my.action.bat.SCHEDULE_ACT" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
         </activity>
+        <activity android:name="ActitvityFilter"></activity>
     </application>
 
 </manifest>
